--- a/create.html
+++ b/create.html
@@ -55,6 +55,8 @@
                 </div>
             </section>
 
+            <!-- Editor now opens in its own page (editor.html) -->
+
             <!-- File Options -->
             <section class="file-options" aria-labelledby="file-options-heading">
                 <h2 id="file-options-heading" class="visually-hidden">File Options</h2>
